--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    // Temporary fix until alpha10
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
 }
 
 dependencies {
@@ -25,8 +30,19 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.github.castorflex.verticalviewpager:library:19.0.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    // Vertical ViewPager
+    implementation 'com.github.castorflex.verticalviewpager:library:19.0.1'
+    // Pie Chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+}
+
+// Library for pie chart
+allprojects {
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
 }
